🐞 Bug in light mode, change dark mode functions.

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -6,7 +6,7 @@
     position       : relative;
     padding        : 20px;
 
-    :global .dark-theme :local & {
+    :global .dark :local & {
         background: transparent;
     }
 
