--- a/src/styles/menu.module.css
+++ b/src/styles/menu.module.css
@@ -69,7 +69,7 @@
     overflow      : hidden;
     z-index       : 99;
 
-    :global .dark-theme :local & {
+    :global .dark :local & {
         background: #191919;
     }
 
@@ -122,7 +122,7 @@
     overflow     : hidden;
     z-index      : 99;
 
-    :global .dark-theme :local & {
+    :global .dark :local & {
         background: var(--dark-background-secondary);
     }
 
@@ -140,7 +140,7 @@
             border-radius: 3px;
             cursor       : pointer;
 
-            :global .dark-theme :local & {
+            :global .dark :local & {
                 background: rgba(0, 0, 0, 0.15);
             }
         }
