--- a/src/styles/navigation.module.css
+++ b/src/styles/navigation.module.css
@@ -20,7 +20,7 @@
     cursor         : pointer;
     appearance     : none;
 
-    :global .dark-theme :local & {
+    :global .dark :local & {
         background: var(--dark-background-secondary);
     }
 
