--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -8,7 +8,7 @@
     /* &:not(:last-of-type) {
         border-bottom: 1px solid var(--light-border-color);
 
-        :global .dark-theme :local & {
+        :global .dark :local & {
             border-color: var(--dark-border-color);
         }
     } */
@@ -31,7 +31,7 @@
     border-radius: 5px;
     background-color: #fafafa;
 
-    :global .dark-theme :local & {
+    :global .dark :local & {
         background: #191919;
     }
 }
